--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^5.1.0",
+    "google-auth-library": "^10.4.0",
+    "googleapis": "^162.0.0",
     "xlsx": "^0.18.5"
   },
   "description": "",
